# rustrix

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: command_line.rs  mod.rs  print.rs
src/matrix/: column.rs  glyph.rs  mod.rs  render.rs  row.rs  waterfall.rs
src/utils/: color.rs  mod.rs  rand.rs
