[package]
name = "rustrix"
version = "0.1.0"
authors = ["Ometeor-Zheero-OMZ <sicsempertyrannis98@gmail.com>"]
description = "The Matrix Baed on Terminal"
repository = "https://github.com/Ometeor-Zheero-OMZ/rustrix"
readme = "README.md"
categories = ["termianl", "animation"]
license = "MIT"
edition = "2021"
rust-version = "1,83"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
