[package]
name = "rustrix"
version = "0.1.0"
authors = ["itsakeyfut <sicsempertyrannis98@gmail.com>"]
description = "The Matrix Baed on Terminal"
repository = "https://github.com/itsakeyfut/rustrix"
readme = "README.md"
categories = ["termianl", "animation"]
license = "MIT"
edition = "2024"
rust-version = "1.86"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
rand = "0.8.5"

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false